添加收藏夹 - 修复标签效果

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="fantastic-admin-home">
+      <div class="vue-ts-admin-home">
         <div class="loading">
           <div class="square"></div>
           <div class="square"></div>
