--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="square"></div>
           <div class="square"></div>
         </div>
-        <div class="text"><%= title %>载入中…</div>
+        <div class="text"><%= title %>载入中</div>
       </div>
       <div id="browser-upgrade">
         <div class="title">为了您的体验，推荐使用以下浏览器</div>
