修改名称正式为kpu-web

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" />
     <link rel="stylesheet" href="/loading.css" />
     <link rel="stylesheet" href="/browser_upgrade/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="vue-ts-admin-home">
+      <div class="kpu-web-home">
         <div class="loading">
           <div class="square"></div>
           <div class="square"></div>
